Refactor tests and code to improve readability and consistency